[package]
name = "shmem-queue"
version = "0.1.0"
authors = ["Ankit Bhardwaj <bhrdwj.ankit@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bench"
path = "benches/bench.rs"

[profile.dev]
opt-level = 3

[dependencies]
log = "0.4.0"
libc = "0.2.109"
cstr_core = "0.2.4"

[dev-dependencies]
nix = "0.26.2"
env_logger = "0.9.0"

[features]
default = ["mpsc"]
spsc = []
mpsc = []